--- a/Example/JCModuleDemo/JCModuleDemo-Info.plist
+++ b/Example/JCModuleDemo/JCModuleDemo-Info.plist
@@ -20,6 +20,29 @@
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>com.JCModule</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>JCModule</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>com.JCModule</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>openApp.JCModule</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
