--- a/Example/JCModuleDemo.xcodeproj/xcshareddata/xcschemes/JCModuleDemo-Example.xcscheme
+++ b/Example/JCModuleDemo.xcodeproj/xcshareddata/xcschemes/JCModuleDemo-Example.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "6003F589195388D20070C39A"
-               BuildableName = "JCModuleDemo_Example.app"
+               BuildableName = "JC&#x7684;Demo.app"
                BlueprintName = "JCModuleDemo_Example"
                ReferencedContainer = "container:JCModuleDemo.xcodeproj">
             </BuildableReference>
@@ -27,6 +27,15 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "6003F589195388D20070C39A"
+            BuildableName = "JC&#x7684;Demo.app"
+            BlueprintName = "JCModuleDemo_Example"
+            ReferencedContainer = "container:JCModuleDemo.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <Testables>
          <TestableReference
             skipped = "NO">
@@ -39,17 +48,6 @@
             </BuildableReference>
          </TestableReference>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "6003F589195388D20070C39A"
-            BuildableName = "JCModuleDemo_Example.app"
-            BlueprintName = "JCModuleDemo_Example"
-            ReferencedContainer = "container:JCModuleDemo.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -66,13 +64,11 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "6003F589195388D20070C39A"
-            BuildableName = "JCModuleDemo_Example.app"
+            BuildableName = "JC&#x7684;Demo.app"
             BlueprintName = "JCModuleDemo_Example"
             ReferencedContainer = "container:JCModuleDemo.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -85,7 +81,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "6003F589195388D20070C39A"
-            BuildableName = "JCModuleDemo_Example.app"
+            BuildableName = "JC&#x7684;Demo.app"
             BlueprintName = "JCModuleDemo_Example"
             ReferencedContainer = "container:JCModuleDemo.xcodeproj">
          </BuildableReference>
